Fixed spacing styling and text decoration

--- a/src/scss/cs/homepage.scss
+++ b/src/scss/cs/homepage.scss
@@ -200,7 +200,7 @@
       color: #fff;
       text-align: center;
       border-radius: 5px;
-      padding: 5px 0;
+      padding: 15px;
       position: absolute;
       z-index: 1;
       bottom: 125%;
