--- a/src/scss/cs/isaac.scss
+++ b/src/scss/cs/isaac.scss
@@ -350,7 +350,7 @@ h2.h-title {
 
 .homepage-sub-title {
   font-family: "dm-sans-light", DMSans-Light, sans-serif;
-  font-size: 40px;
+  font-size: 48px;
   color: #120540;
 }
 
@@ -514,7 +514,7 @@ h2.h-title {
 
 .details-button:hover {
   color: #6b009a;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a.browse-events {
